[project]
name = "multi-agent-chatroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
